--- a/css/jeff-set.css
+++ b/css/jeff-set.css
@@ -197,7 +197,7 @@ input[type="submit"]:hover {
 .main-link {
   display: inline-block;
   font-weight: normal;
-  color: #080808;
+  color: var(--light);
   background-color: var(--accent);
   padding: 6px 10px;
   border: none;
