--- a/css/jeff-set.css
+++ b/css/jeff-set.css
@@ -7,9 +7,9 @@
 }
 
 @font-face {
-  font-family: 'Rubik Doodle Shadow';
-  src: url('../font/RubikDoodleShadow-Regular.woff2') format('woff2'),
-    url('../font/RubikDoodleShadow-Regular.woff') format('woff');
+  font-family: 'Rubik';
+  src: url('../font/Rubik-Bold.woff2') format('woff2'),
+    url('../font/Rubik-Bold.woff') format('woff');
   font-weight: 500;
   font-style: normal;
 }
